# bazel_hooks

./: BUILD.bazel  WORKSPACE  bootstrap.js  index.html  index.tsx  package.json  tsconfig.json
